@@ -18,6 +18,7 @@ package org.springframework.boot.devtools.restart;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.management.ManagementFactory;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -29,6 +30,7 @@ import java.util.List;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
+import java.util.stream.Stream;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -89,13 +91,33 @@ final class ChangeableUrls implements Iterable<URL> {
 		return this.urls.toString();
 	}
 
-	public static ChangeableUrls fromUrlClassLoader(URLClassLoader classLoader) {
+	public static ChangeableUrls fromClassLoader(ClassLoader classLoader) {
 		List<URL> urls = new ArrayList<>();
-		for (URL url : classLoader.getURLs()) {
+		for (URL url : urlsFromClassLoader(classLoader)) {
 			urls.add(url);
 			urls.addAll(getUrlsFromClassPathOfJarManifestIfPossible(url));
 		}
 		return fromUrls(urls);
+	}
+
+	private static URL[] urlsFromClassLoader(ClassLoader classLoader) {
+		if (classLoader instanceof URLClassLoader) {
+			return ((URLClassLoader) classLoader).getURLs();
+		}
+		return Stream
+				.of(ManagementFactory.getRuntimeMXBean().getClassPath()
+						.split(File.pathSeparator))
+				.map(ChangeableUrls::toURL).toArray(URL[]::new);
+	}
+
+	private static URL toURL(String classPathEntry) {
+		try {
+			return new File(classPathEntry).toURI().toURL();
+		}
+		catch (MalformedURLException ex) {
+			throw new IllegalArgumentException(
+					"URL could not be created from '" + classPathEntry + "'", ex);
+		}
 	}
 
 	private static List<URL> getUrlsFromClassPathOfJarManifestIfPossible(URL url) {
@@ -104,7 +126,7 @@ final class ChangeableUrls implements Iterable<URL> {
 			return Collections.<URL>emptyList();
 		}
 		try {
-			return getUrlsFromManifestClassPathAttribute(jarFile);
+			return getUrlsFromManifestClassPathAttribute(url, jarFile);
 		}
 		catch (IOException ex) {
 			throw new IllegalStateException(
@@ -126,8 +148,8 @@ final class ChangeableUrls implements Iterable<URL> {
 		return null;
 	}
 
-	private static List<URL> getUrlsFromManifestClassPathAttribute(JarFile jarFile)
-			throws IOException {
+	private static List<URL> getUrlsFromManifestClassPathAttribute(URL jarUrl,
+			JarFile jarFile) throws IOException {
 		Manifest manifest = jarFile.getManifest();
 		if (manifest == null) {
 			return Collections.<URL>emptyList();
@@ -139,23 +161,26 @@ final class ChangeableUrls implements Iterable<URL> {
 		}
 		String[] entries = StringUtils.delimitedListToStringArray(classPath, " ");
 		List<URL> urls = new ArrayList<>(entries.length);
-		File parent = new File(jarFile.getName()).getParentFile();
+		List<URL> nonExistentEntries = new ArrayList<>();
 		for (String entry : entries) {
 			try {
-				File referenced = new File(parent, entry);
-				if (referenced.exists()) {
-					urls.add(referenced.toURI().toURL());
+				URL referenced = new URL(jarUrl, entry);
+				if (new File(referenced.getFile()).exists()) {
+					urls.add(referenced);
 				}
 				else {
-					System.err.println("Ignoring Class-Path entry " + entry + " found in"
-							+ jarFile.getName() + " as " + referenced
-							+ " does not exist");
+					nonExistentEntries.add(referenced);
 				}
 			}
 			catch (MalformedURLException ex) {
 				throw new IllegalStateException(
 						"Class-Path attribute contains malformed URL", ex);
 			}
+		}
+		if (!nonExistentEntries.isEmpty()) {
+			System.out.println("The Class-Path manifest attribute in " + jarFile.getName()
+					+ " referenced one or more files that do not exist: "
+					+ StringUtils.collectionToCommaDelimitedString(nonExistentEntries));
 		}
 		return urls;
 	}
